--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -3,33 +3,29 @@ name: Python Tests
 on:
   push:
     branches:
-      - main  # Ejecuta el flujo cuando haya un push en la rama principal
+      - main
   pull_request:
     branches:
-      - main  # Ejecuta el flujo en solicitudes de pull hacia la rama principal
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Configurar el repositorio
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # 2. Configurar Python
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: "3.9"  # Versión de Python que deseas usar
+        python-version: "3.9"
 
-    # 3. Instalar dependencias
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r .\requirements.txt
+        pip install -r requirements.txt
 
-    # 4. Ejecutar las pruebas
     - name: Run tests
       run: |
         pytest --disable-warnings
