Fix CircleCI workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,3 +25,9 @@ jobs:
       - store_artifacts:
           path: report.html
           destination: test-report
+
+workflows:
+  version: 2
+  test-workflow:
+    jobs:
+      - test
